# text_tool

./: Cargo.toml  README.md  config.toml
src/: cli.rs  config.rs  lib.rs  main.rs
tests/: integration_test.rs
