[package]
name = "text_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.2"

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.16"
predicates = "2.1"
tempfile = "3.3"